:hamer: Fixed Nav behavior on mobile screen

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -141,11 +141,23 @@ section {
     top: 5rem;
     flex-direction: column;
     background-color: #000000;
-    width: 90%;
+    width: 100%;
     border-radius: 10px;
     text-align: center;
     transition: 0.3s;
     box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+
+  .header {
+    width: 100vw;
+    position: fixed;
+    display: flex;
+    background-color: black;
+
+    nav {
+      width: 100%;
+      justify-self: space-between;
+    }
   }
 
   .active {
